--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "aos": "^2.3.4",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
