--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "aos": "^2.3.4",
     "next": "15.0.4",
     "next-sitemap": "^4.2.3",
+    "nextjs-google-analytics": "^2.3.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
