--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "aos": "^2.3.4",
+    "country-flag-icons": "^1.5.14",
     "next": "15.0.4",
     "next-sitemap": "^4.2.3",
     "nextjs-google-analytics": "^2.3.7",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-gtm-module": "^2.0.11"
   },
